gulp configuration for release

--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="description" content="NG6-Starter by @AngularClass">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
   <base href="/">
 </head>
 
-<body style="height: 100vh; width: 100vw" ng-app="paraboly.sandbox" ng-strict-di ng-cloak>
+<body style="height: 100vh; width: 100vw" ng-app="paraboly.appComponent" ng-strict-di ng-cloak>
   <app-component>
     Loading...
   </app-component>
