package.json is updated

--- a/lib/index.html
+++ b/lib/index.html
@@ -1,24 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Paraboly AngularJS ES6 Component</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="description" content="Paraboly AngularJS ES6 Component" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+    <base href="/" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>NG6-Starter by @AngularClass</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="description" content="NG6-Starter by @AngularClass">
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
-  <base href="/">
-</head>
-
-<body style="height: 100vh; width: 100vw" ng-app="paraboly.appComponent" ng-strict-di ng-cloak>
-  <app-component>
-    Loading...
-  </app-component>
-
-</body>
-
+  <body
+    style="height: 100vh; width: 100vw"
+    ng-app="paraboly.appComponent"
+    ng-strict-di
+    ng-cloak
+  >
+    <app-component>
+      Loading...
+    </app-component>
+  </body>
 </html>
