- [x] Update component generator - [x] Split gulp tasks into multiple files - [x] Add Paraboly Sandbox Module - [x] Add moment and lodash to peer dependency

--- a/lib/index.html
+++ b/lib/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Paraboly AngularJS ES6 Component</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="description" content="Paraboly AngularJS ES6 Component" />
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
-    <base href="/" />
-  </head>
 
-  <body
-    style="height: 100vh; width: 100vw"
-    ng-app="paraboly.appComponent"
-    ng-strict-di
-    ng-cloak
-  >
-    <app-component>
-      Loading...
-    </app-component>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Paraboly AngularJS ES6 Component</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="description" content="Paraboly AngularJS ES6 Component" />
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+  <script src="https://momentjs.com/downloads/moment.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+  <base href="/" />
+</head>
+<style>
+  app-component {
+    height: 300px;
+    width: 300px;
+    background-color: #dfdfdf;
+    color: #333333;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+</style>
+
+<body style="height: 100vh; width: 100vw" ng-app="paraboly.sandbox" ng-strict-di ng-cloak>
+  <paraboly-sandbox>
+    Loading...
+  </paraboly-sandbox>
+</body>
+
 </html>
