- Update index.html to match parabol angularjs environment - Remove all ui dependencies from package.json - Add proxy support - Add .env file support

--- a/lib/index.html
+++ b/lib/index.html
@@ -11,6 +11,11 @@
   <meta name="description" content="Paraboly AngularJS ES6 Component" />
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/inspinia@2.6.5/dist/inspinia.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
   <script src="https://momentjs.com/downloads/moment.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
@@ -23,12 +28,12 @@
     width: 100vw;
     margin: 0;
     padding: 0;
+    color: #dfdfdf;
   }
 
   paraboly-sandbox-banner {
     display: flex;
     background-color: #303237;
-    color: #dfdfdf;
     font-family: monospace;
     text-align: center;
     justify-content: center;
